--- a/FestivalCine-back/pom.xml
+++ b/FestivalCine-back/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-	<parent>
-	    <groupId>co.edu.uniandes.sourceteam</groupId>
-    	<artifactId>FestivalCine</artifactId>
-    	<version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>co.edu.uniandes.sourceteam</groupId>
+        <artifactId>festivalcine</artifactId>
+        <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>FestivalCine-back</artifactId>
+    <artifactId>festivalcine-back</artifactId>
     <packaging>jar</packaging>
-	
+    <name>festivalcine-back</name>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
