--- a/FestivalCine-web/pom.xml
+++ b/FestivalCine-web/pom.xml
@@ -2,23 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-	    <groupId>co.edu.uniandes.sourceteam</groupId>
-    	<artifactId>FestivalCine</artifactId>
-    	<version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>co.edu.uniandes.sourceteam</groupId>
+        <artifactId>FestivalCine</artifactId>
+        <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>FestivalCine-web</artifactId>
+    <artifactId>festivalcine-web</artifactId>
     <packaging>war</packaging>
 
-    <name>SourceTeam_cines</name>
+    <name>festivalcine-web</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
-   <dependencies>
+    <dependencies>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
