--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ tmp/
 
 # Binaries produced by Maven
 target/
+/FestivalCine-back/target/
+/FestivalCine-web/target/
 
 # Package Files
 *.jar
@@ -37,6 +39,9 @@ node_modules/
 # NetBeans
 nbactions.xml
 /nb-configuration.xml
+/FestivalCine-web/nb-configuration.xml
+/FestivalCine-back/nb-configuration.xml
+
 
 # Eclipse 
 .project
