--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>co.edu.uniandes.sourceteam</groupId>
-    <artifactId>festivalcine</artifactId>
+    <artifactId>sourceteam</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     
