--- a/FestivalCine-back/pom.xml
+++ b/FestivalCine-back/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>festivalcine-back</artifactId>
+    <artifactId>FestivalCine-back</artifactId>
     <packaging>jar</packaging>
-    <name>festivalcine-back</name>
+    <name>FestivalCine-back</name>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
