--- a/FestivalCine-web/pom.xml
+++ b/FestivalCine-web/pom.xml
@@ -8,10 +8,10 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>festivalcine-web</artifactId>
+    <artifactId>FestivalCine-web</artifactId>
     <packaging>war</packaging>
 
-    <name>festivalcine-web</name>
+    <name>FestivalCine-web</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
