--- a/FestivalCine-web/pom.xml
+++ b/FestivalCine-web/pom.xml
@@ -27,6 +27,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>co.edu.uniandes.sourceteam</groupId>
+            <artifactId>FestivalCine-back</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>co.edu.uniandes.sourceteam</groupId>
+            <artifactId>festivalcine-back</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
